kubernetes/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - explorer.dev.api.az.wayru.tech
      secretName: explorer-service
  rules:
    - host: explorer.dev.api.az.wayru.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: explorer-service
                port:
                  number: 80
